# pmpfun

./: .env  .env.example  COMPLETE_SETUP_GUIDE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  INTEGRATION_COMPLETE.md  NEOBRUTALIST_DESIGN.md  README.md  WINDOWS_SETUP.md  add-platform-fees.ps1  deploy-contracts.ps1  deploy-via-codespaces.md  deploy-without-build.ps1  docker-compose.yml  fix-build-tools.ps1  frontend-only-setup.ps1  get-wasm.ps1  install-build-tools.ps1  manual-stellar-setup.ps1  quick-setup.ps1  rapid-deploy.ps1  setup-complete.ps1  setup-windows.ps1  start-backend.ps1  start-frontend.ps1  start-system.ps1  stellar_pump_launchpad.optimized.wasm  ultra-fast-deploy.ps1
.kiro/specs/stellar-pump-launchpad/: design.md  requirements.md  tasks.md
backend/: Cargo.toml
backend/src/: api.rs  config.rs  database.rs  indexer.rs  main.rs  models.rs
contracts/: Cargo.toml
contracts/launchpad/: Cargo.toml
contracts/launchpad/src/: asset_manager.rs  bonding_curve.rs  contract.rs  errors.rs  lib.rs  storage.rs  types.rs
database/migrations/: 001_initial_schema.sql
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: FreighterDebug.tsx  Header.tsx  TokenTradingCard.tsx  WalletConnector.tsx
frontend/src/config/: contracts.ts
frontend/src/hooks/: useTrustline.ts  useWallet.ts
frontend/src/pages/: LandingPage.tsx  TokenCreationPage.tsx  TokenDetailPage.tsx
frontend/src/services/: ContractService.ts  TrustlineService.ts  WalletService.ts
scripts/: deploy-testnet.ps1
